--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Florencia Gazzo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass --watch ./assets/scss/main.scss ./assets/css/style.css"
   },
   "repository": {
     "type": "git",
