--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gazzopreentrega",
   "version": "1.0.0",
-  "description": "Florencia Gazzo",
+  "description": "Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase.",
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch ./assets/scss/main.scss ./assets/css/style.css"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/FlorGazzo/GazzoPreEntrega.git"
   },
-  "author": "Flor Gazzo",
+  "author": "Florencia Gazzo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/FlorGazzo/GazzoPreEntrega/issues"
@@ -18,5 +18,57 @@
   "homepage": "https://github.com/FlorGazzo/GazzoPreEntrega#readme",
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "dependencies": {
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "anymatch": "^3.1.2",
+    "brace-expansion": "^1.1.11",
+    "chokidar": "^3.5.3",
+    "debug": "^3.2.7",
+    "concat-map": "^0.0.1",
+    "glob-parent": "^5.1.2",
+    "ignore-by-default": "^1.0.1",
+    "is-binary-path": "^2.1.0",
+    "braces": "^3.0.2",
+    "abbrev": "^1.1.1",
+    "has-flag": "^3.0.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "ms": "^2.1.3",
+    "minimatch": "^3.1.2",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "picomatch": "^2.3.1",
+    "semver": "^5.7.1",
+    "simple-update-notifier": "^1.0.7",
+    "readdirp": "^3.6.0",
+    "supports-color": "^5.5.0",
+    "to-regex-range": "^5.0.1",
+    "touch": "^3.1.0",
+    "undefsafe": "^2.0.5",
+    "pstree.remy": "^1.1.8",
+    "fill-range": "^7.0.1"
+  },
+  "keywords": [
+    "ata",
+    "taekwondo",
+    "martial",
+    "arts",
+    "ata",
+    "taekwondo",
+    "artes",
+    "marciales",
+    "patadas",
+    "defensa",
+    "defensa",
+    "personal",
+    "cinturon",
+    "negro",
+    "black",
+    "belt",
+    "danes",
+    "tiger"
+  ]
 }
