--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PreEntrega3-Gazzo",
+  "name": "gazzopreentrega",
   "version": "1.0.0",
   "description": "Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase.",
   "main": "index.js",
