--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Tiger Martial Arts | Líderes en las Artes Marciales con los mejores programas de para niños, jóvenes y adultos. Prueba GRATIS una clase.",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./assets/scss/main.scss ./assets/css/style.css"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass --include-path scss scss/main.scss css/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
     "type": "git",
@@ -17,39 +19,40 @@
   },
   "homepage": "https://github.com/FlorGazzo/GazzoPreEntrega#readme",
   "devDependencies": {
+    "node-sass": "^7.0.3",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "abbrev": "^1.1.1",
+    "anymatch": "^3.1.2",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.2.0",
-    "anymatch": "^3.1.2",
     "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
     "chokidar": "^3.5.3",
-    "debug": "^3.2.7",
     "concat-map": "^0.0.1",
+    "debug": "^3.2.7",
+    "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
+    "has-flag": "^3.0.0",
     "ignore-by-default": "^1.0.1",
     "is-binary-path": "^2.1.0",
-    "braces": "^3.0.2",
-    "abbrev": "^1.1.1",
-    "has-flag": "^3.0.0",
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
-    "ms": "^2.1.3",
     "minimatch": "^3.1.2",
+    "ms": "^2.1.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
+    "pstree.remy": "^1.1.8",
+    "readdirp": "^3.6.0",
     "semver": "^5.7.1",
     "simple-update-notifier": "^1.0.7",
-    "readdirp": "^3.6.0",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
     "touch": "^3.1.0",
-    "undefsafe": "^2.0.5",
-    "pstree.remy": "^1.1.8",
-    "fill-range": "^7.0.1"
+    "undefsafe": "^2.0.5"
   },
   "keywords": [
     "ata",
